trying to fix overflow-x issue

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html {
     height: 100%;
     height: -webkit-fill-available;
     scroll-behavior: smooth;
-
+    overflow-x: hidden;
 }
 
 body {
